# shepherd-nova

./: .codespellrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml  zizmor.yaml
.github/workflows/: pages_update.yaml  quality_assurance.yaml
docs/: conf.py  index.rst  robots.txt
docs/_templates/: header.html  page.html  sidebar_toc.html
docs/about/: acknowledgments.md  contact.md  disclaimer.md  privacy.md
docs/content/: about.md  access.md  account.md  deployment.md  environments.md  faq.md  getting_started.md  getting_started_xp1.py  getting_started_xp2.py  getting_started_xp_schedule.py  help_me_help_you.md  infrastructure.md  landing_page.md  maintenance.md  news.md  targets.md  virtual_source.md  webapi.md
docs/link_matrix/: link_matrix_2025-03-11  link_matrix_2025-12-10  link_matrix_2026-01-07  link_matrix_2026-02-13  link_matrix_2026-03-23  link_matrix_2026-04-02  link_matrix_2026-04-07
